@@ -1,17 +1,0 @@
-// -*- C++ -*-
-
-#ifndef DecayConfig_H
-#define DecayConfig_H
-
-#include "Herwig++/Config/Herwig.h"
-
-namespace Herwig { 
-
-  using namespace ThePEG;
-
-ThePEG_DECLARE_CLASS_POINTERS(Hw64Decayer, Hw64DecayerPtr);
-
-} // end Herwig namespace
-
-
-#endif // DecayConfig_H 
