@@ -1,62 +1,0 @@
-// -*- C++ -*-
-//
-// This is the implementation of the inlined member functions of
-// the ExampleDecayer class.
-//
-
-namespace Herwig {
-
-
-inline ExampleDecayer::ExampleDecayer() {}
-
-inline ExampleDecayer::ExampleDecayer(const ExampleDecayer & x)
-  : ThePEG::Decayer(x) {}
-
-inline IBPtr ExampleDecayer::clone() const {
-  return new_ptr(*this);
-}
-
-inline IBPtr ExampleDecayer::fullclone() const {
-  return new_ptr(*this);
-}
-
-inline void ExampleDecayer::doupdate() throw(UpdateException) {
-  ThePEG::Decayer::doupdate();
-  // First update base class.
-  bool redo = touched();
-  // redo if touched.
-//  UpdateChecker::check(aDependentMember, redo);
-  // Update referenced objects on which this depends redo is set to true
-  // if the dependent object is touched.
-//  for_each(ContainerOfDependencies, UpdateChecker(redo));
-  // Update a container of references.
-//  for_each(MapOfDependencies, UpdateMapChecker(redo));
-  // Update a map of references.
-  if ( !redo ) return;
-  // return if nothing has been touched. Otherwise do the actual update.
-//  touch()
-  // Touch if anything has changed.
-}
-
-inline void ExampleDecayer::doinit() throw(InitException) {
-  ThePEG::Decayer::doinit();
-}
-
-inline void ExampleDecayer::dofinish() {
-  ThePEG::Decayer::dofinish();
-}
-
-inline void ExampleDecayer::rebind(const TranslationMap & trans)
-  throw(RebindException) {
-  // dummy = trans.translate(dummy);
-  ThePEG::Decayer::rebind(trans);
-}
-
-inline IVector ExampleDecayer::getReferences() {
-  IVector ret = ThePEG::Decayer::getReferences();
-  // ret.push_back(dummy);
-  return ret;
-}
-
-
-}
